Fazendo mundanças nos tipos de dados no banco de dados